[bdist_wheel]
universal = 1

[metadata]
description-file = README.rst
license_file = LICENSE

[tool:pytest]
addopts = --cov=blackfynn --cov-report=term --cov-report=html
testpaths = tests

[coverage:run]
source = blackfynn
omit = blackfynn/cli/*

[isort]
line_length = 88
use_parentheses = True
include_trailing_comma = True
multi_line_output = 3
